syntax = 'proto3';

package auth;

option go_package = "github.com/cifra-city/cifra-sso;ssov1";

enum events {
  LOGIN = 0;
  CHANGE_PASSWORD = 1;
  CHANGE_USERNAME = 2;
  CHANGE_EMAIL = 3;
  CONFIRM_EMAIL = 4;
}

// Auth service for authentication and authorization users
service Auth {
  rpc Logout(Empty) returns (Empty);

  rpc Login(LoginReq) returns (LoginResp);
  rpc ChangePass(ChangePassReq) returns (Empty);
  rpc ChangeUsername(ChangeUsernameReq) returns (Empty);
  rpc ChangeEmail(ChangeEmailReq) returns (Empty);
}

service Reg {
  rpc Register(RegisterReq) returns (Empty);
}

service Verify {
  rpc VerifyEmail(VerifyEmailReq) returns (Empty);

  rpc SendConfirmCode(Empty) returns (InquiryResp); // Запрос для получения доступа на изменение данных
  rpc AccessForChanges(AccessReq) returns (AccessResp); // Подтверждение доступа на изменение данных

}

message RegisterReq {
   string email = 1;
   string username = 2;
   string password = 3;
}

message LoginReq{
  optional string email = 1;
  optional string username = 2;
  string password = 3;
}

message ChangePassReq {
  string new_password = 1;
}

message ChangeEmailReq {
  string password = 1;
  string new_email = 3;
}

message ChangeUsernameReq {
  string password = 1;
  string new_username = 2;
}

message AccessReq{
  events eve = 1;
  string code = 2;
}

message InquiryReq{
    events eve = 1;
}

message LoginResp {
  string token = 1;
}

message AccessResp {
  events eve = 1;
}

message InquiryResp{
  string link = 1;
}

message VerifyEmailReq {
  string code = 1;
}

message Empty {}